--- a/src/main/webapp/view/product_tab.html
+++ b/src/main/webapp/view/product_tab.html
@@ -31,17 +31,22 @@
                     <div class="form-group col-md-12">
                         <label class="col-md-2 control-lable" for="file">Email</label>
                         <div class="col-md-7">
-                            <input type="text" ng-model="ctrl.product.productCol" name="Count" class="form-control input-sm" placeholder="Enter your Email" required/>
+                            <input type="text" ng-model="ctrl.product.productCol" name="Count" class="form-control input-sm" placeholder="Enter your Email"/>
                         </div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="form-group col-md-12">
-                        <label class="col-md-2 control-lable" for="file">Compani</label>
+                        <label class="col-md-2 control-lable" for="file">Date</label>
                         <div class="col-md-7">
-                            <input type="text" ng-model="ctrl.product.date" name="date" class="form-control input-sm" placeholder="Enter your Email" required/>
-                        </div>
+                            <input type="text" ng-model="ctrl.product.date" name="date" class="form-control input-sm" placeholder="Enter your Email"/>
+                            <div ng-controller="AppCtrl" ng-cloak>
+                                <md-content layout-padding>
+                            <md-datepicker ng-model="myDate" md-placeholder="Enter date"></md-datepicker>
+                                </md-content>
+                            </div>
+                            </div>
                     </div>
                 </div>
 
