--- a/src/main/webapp/view/typeStock_tab.html
+++ b/src/main/webapp/view/typeStock_tab.html
@@ -8,7 +8,7 @@
                     <div class="form-group col-md-12">
                         <label class="col-md-2 control-lable" for="file">ID</label>
                         <div class="col-md-7">
-                            <input type="text" ng-model="ctrl.product.id" name="id" class="username form-control input-sm" placeholder="Enter your ID"/>
+                            <input type="text" ng-model="ctrl.typeStock.id" name="id" class="username form-control input-sm" placeholder="Enter your ID"/>
                             <div class="has-error" ng-show="myForm.$dirty">
                                 <span ng-show="myForm.id.$error.required">This is a required field</span>
                                 <span ng-show="myForm.id.$invalid">This field is invalid </span>
@@ -22,41 +22,7 @@
                     <div class="form-group col-md-12">
                         <label class="col-md-2 control-lable" for="file">Name</label>
                         <div class="col-md-7">
-                            <input type="text" ng-model="ctrl.product.name" class="form-control input-sm" placeholder="Enter your Name"/>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-md-12">
-                        <label class="col-md-2 control-lable" for="file">Email</label>
-                        <div class="col-md-7">
-                            <input type="text" ng-model="ctrl.product.productCol" name="Count" class="form-control input-sm" placeholder="Enter your Email"/>
-                        </div>
-                    </div>
-                </div>
-
-                <!--<div class="row">
-                    <div class="form-group col-md-12">
-                        <label class="col-md-2 control-lable" for="file">Date</label>
-                        <div class="col-md-7">
-                            <input type="text" ng-model="ctrl.product.date" name="date" class="form-control input-sm" placeholder="Enter your Email"/>
-&lt;!&ndash;                            <div ng-controller="AppCtrl" ng-cloak>
-                                <md-content layout-padding>
-                            <md-datepicker ng-model="myDate" md-placeholder="Enter date"></md-datepicker>
-                                </md-content>&ndash;&gt;
-                            <input id="datepicker" class="datepicker" type="date">
-                            </div>
-                            </div>
-                    </div>
-                </div>-->
-
-                <div class="row">
-                    <div class="form-group col-md-12">
-                        <label class="col-md-2 control-lable" for="file">Client</label>
-                        <div class="col-md-7">
-                            <select ng-model="ctrl.product.client" ng-options="x.name for x in ctrl.clients">
-                            </select>
+                            <input type="text" ng-model="ctrl.typeStock.name" class="form-control input-sm" placeholder="Enter your Name"/>
                         </div>
                     </div>
                 </div>
@@ -80,22 +46,13 @@
                 <tr>
                     <th>ID.</th>
                     <th>Name</th>
-                    <th>productCol</th>
-                    <th>date</th>
-                    <th>client</th>
                     <th width="20%"></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="u in ctrl.products">
+                <tr ng-repeat="u in ctrl.typeStocks">
                     <td><span>{{ u.id }}</span></td>
                     <td><span>{{ u.name }}</span></td>
-                    <td><span>{{ u.productCol }}</span></td>
-                    <td><span>{{ u.date | date:'dd.MM.yyyy' }}</span></td>
-                    <!--<td><select ng-model="u.role" ng-options="">-->
-                    <!--<option>-</option>-->
-                    <!--</select></td>-->
-                    <td><span>{{ u.client.name }}</span></td>
                     <td>
                         <button type="button" ng-click="ctrl.edit(u.id)" class="btn btn-success custom-width">Edit</button>  <button type="button" ng-click="ctrl.remove(u)" class="btn btn-danger custom-width">Remove</button>
                     </td>
