--- a/src/main/webapp/view/index.html
+++ b/src/main/webapp/view/index.html
@@ -39,7 +39,7 @@
   </div>
   
   <!-- Grid -->
-  <div class="w3-row w3-container">
+  <div class="w3-row w3-container" id="about">
     <div class="w3-center w3-padding-64">
       <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Кратко о нас</span>
     </div>
